--- a/src/html/list.html
+++ b/src/html/list.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>列表页</title>
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/common.css" />
-		<link rel="stylesheet" href="css/list.css" />
-		<script src="js/jquery-1.12.0.js"></script>
-		<script src="js/common.js"></script>
-		<script src="js/list.js" ></script>
+		<link rel="stylesheet" href="../css/reset.css" />
+		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/list.css" />
+		<script src="../js/jquery-1.12.0.js"></script>
+		<script src="../js/common.js"></script>
+		<script src="../js/list.js" ></script>
 	</head>
 	<body>
 		<div id="header">
@@ -33,7 +33,7 @@
 	        		</li>
 	        		<li>
 	        			<a href="#" title="手机版"><i class="icon-phone"></i>手机版</a>
-	        			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="img/img-code.jpg"/></p>
+	        			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="../img/img-code.jpg"/></p>
 	        		</li>
 	        		<li>
 	        			<a href="#" title="我的收藏">我的收藏<i class="icon"></i></a>
@@ -49,7 +49,7 @@
         	<div class="seach">
         		<input type="text" class="seach-input" placeholder="七夕情人节送女朋友什么？" />
         		<input type="submit" class="search-button"/>
-	        	<img src="img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
+	        	<img src="../img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
         		<ul class="search-tab">
         			<li><a href="#" title="送女朋友">送女朋友</a></li>
         			<li><a href="#" title="浪漫表白">浪漫表白</a></li>
@@ -120,7 +120,7 @@
 					<!--按类目选礼物-->
 					<div class="gift-lm" style="width: 520px;">
 					    <p class="gift-tle">按类目选礼物</p>
-					    <div class="cate-cont">
+					    <div class="cate-cont" style="width: 540px;">
 					        <div class="cate-item">
 					        <h3 class="vm-cap"> <a title="时尚饰品" href="" style="font-size:14px;">时尚饰品</a> </h3>
 					        <div class="vm-cont">
@@ -233,7 +233,7 @@
         	<div class="nav">
         		<ul class="nav-list">
         			<li><a href="#" title="首页">首页</a></li>
-        			<li><a href="#" title="暖心礼物">暖心礼物<img src="img/navHot.gif" class="nav-hot"/></a></li>
+        			<li><a href="#" title="暖心礼物">暖心礼物<img src="../img/navHot.gif" class="nav-hot"/></a></li>
         			<li><a href="#" title="送女生">送女生</a></li>
         			<li><a href="#" title="送男生">送男生</a></li>
         			<li><a href="#" title="生日礼物">生日礼物</a></li>
@@ -244,8 +244,66 @@
         	</div>
 		</div>
 	
-		<div class="main">
-			
+		<div id="main">
+			<div class="qixi">
+					<div class="head">
+						<span class="qixi-title">爆款推荐</span>
+						买过的都说不错，销量高评价好，买个放心，再定制一下自己的心意那就完美了
+					</div>
+					<div class="qixiCon">
+						<ul class="qixi-list">
+							<!--<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi1.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							
+							</li>
+							<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi2.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							</li>
+							<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi3.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							</li>
+							<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi4.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							</li>
+							<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi5.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							</li>
+							<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi6.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							</li>
+							<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi7.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							</li>
+							<li>
+								<a href="#" title="情侣秀恩爱手链"><img src="img/qixi8.jpg" alt="情侣秀恩爱手链" /></a>
+								<span class="price"><em>￥</em>179.00<div>13人购买</div></span>
+								<p class="text"><a>情侣秀恩爱手链</a></p>
+							</li>-->
+						</ul>
+					</div>
+					<div class="qixi-footer">
+						<div class="left">
+							<a href="#" title="生日礼物排行榜"><img src="../img/qixi9.jpg" alt="生日礼物排行榜" /></a>
+						</div>
+						<div class="right">
+							<a href="#" title="爱心项链"><img src="../img/qixi10.jpg" alt="爱心项链" /></a>
+						</div>
+					</div>
+				</div>
 		</div>
 	
 		<div id="footer">
