--- a/src/html/product.html
+++ b/src/html/product.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>商品详情</title>
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/common.css" />
-		<link rel="stylesheet" href="css/product.css" />
-		<script src="js/jquery-1.12.0.js"></script>
-		<script src="js/common.js"></script>
-		<script src="js/mycookie.js"></script>
-		<script src="js/product.js" ></script>
+		<link rel="stylesheet" href="../css/reset.css" />
+		<link rel="stylesheet" href="../css/common.css" />
+		<link rel="stylesheet" href="../css/product.css" />
+		<script src="../js/jquery-1.12.0.js"></script>
+		<script src="../js/common.js"></script>
+		<script src="../js/mycookie.js"></script>
+		<script src="../js/product.js" ></script>
 		
 	</head>
 	<body>
 		<div id="header">
-			<span class="logo"><a href="index.html" target="_self" title="卡当网"></a></span>
+			<span class="logo"><a href="../index.html" target="_self" title="卡当网"></a></span>
 			<div class="intro">
 				<ul class="intro-login">
 					<li>Hi，欢迎来到卡当网</li>
@@ -30,12 +30,12 @@
 	        			</ul>
 	        		</li>
 	        		<li>
-	        			<a href="cart.html" target="_blank" title="购物车"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
+	        			<a href="cart.html" target="_blank" title="购物车" id="cart"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
 	        			<p class="select" style="width: 304px;left:80px;color:#999">您的购物车中暂无商品，赶快选择心爱的商品吧！</p>
 	        		</li>
 	        		<li>
 	        			<a href="#" title="手机版"><i class="icon-phone"></i>手机版</a>
-	        			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="img/img-code.jpg"/></p>
+	        			<p class="select" style="left: 100px;width: 148px;height:188px;border: 0;padding: 0;"><img src="../img/img-code.jpg"/></p>
 	        		</li>
 	        		<li>
 	        			<a href="#" title="我的收藏">我的收藏<i class="icon"></i></a>
@@ -51,7 +51,7 @@
         	<div class="seach">
         		<input type="text" class="seach-input" placeholder="七夕情人节送女朋友什么？" />
         		<input type="submit" class="search-button"/>
-	        	<img src="img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
+	        	<img src="../img/kdDes.png" style="float: right;margin:12px 35px 0 0;"/>
         		<ul class="search-tab">
         			<li><a href="#" title="送女朋友">送女朋友</a></li>
         			<li><a href="#" title="浪漫表白">浪漫表白</a></li>
@@ -122,7 +122,7 @@
 					<!--按类目选礼物-->
 					<div class="gift-lm" style="width: 520px;">
 					    <p class="gift-tle">按类目选礼物</p>
-					    <div class="cate-cont">
+					    <div class="cate-cont" style="width: 540px;">
 					        <div class="cate-item">
 					        <h3 class="vm-cap"> <a title="时尚饰品" href="" style="font-size:14px;">时尚饰品</a> </h3>
 					        <div class="vm-cont">
@@ -234,8 +234,8 @@
         	</div>
         	<div class="nav">
         		<ul class="nav-list">
-        			<li><a href="index.html" target="_blank" title="首页">首页</a></li>
-        			<li><a href="#" title="暖心礼物">暖心礼物<img src="img/navHot.gif" class="nav-hot"/></a></li>
+        			<li><a href="../index.html" target="_blank" title="首页">首页</a></li>
+        			<li><a href="#" title="暖心礼物">暖心礼物<img src="../img/navHot.gif" class="nav-hot"/></a></li>
         			<li><a href="#" title="送女生">送女生</a></li>
         			<li><a href="#" title="送男生">送男生</a></li>
         			<li><a href="#" title="生日礼物">生日礼物</a></li>
@@ -255,9 +255,9 @@
 	             				<!--放大镜-->
 								<div id="zoom" class="kd-img-zoom">
 								    <a id="zoomPad">
-									    <img id="smallPic" src="img/product1.jpg">
+									    <img id="smallPic" src="../img/product1.jpg">
 									    <div id="bigPic">
-											<img src="img/bigProduct1.jpg"/>
+											<img src="../img/bigProduct1.jpg"/>
 										</div>
 								    </a>
 								</div>
@@ -267,22 +267,22 @@
 								    <ul id="J_PhotoList" class="zoom-candidate clearfix">
 				                        <li class="item">
 					                        <a href='' class='zoom-full-img zoomThumbActive'>
-					                            <img src="img/product1.jpg">
+					                            <img src="../img/product1.jpg">
 					                        </a>
 					                    </li>
 	                                    <li class="item">
 					                        <a href='' class='zoom-full-img'>
-					                            <img src="img/product2.jpg">
+					                            <img src="../img/product2.jpg">
 					                        </a>
 					                    </li>
 	                                    <li class="item">
 					                        <a href='' class='zoom-full-img'>
-					                            <img src="img/product3.jpg">
+					                            <img src="../img/product3.jpg">
 					                        </a>
 					                     </li>
 	                                    <li class="item">
 					                        <a href='' class='zoom-full-img'>
-					                            <img src="img/product4.jpg">
+					                            <img src="../img/product4.jpg">
 					                        </a>
 					                     </li>
 	                                </ul>
@@ -309,7 +309,7 @@
 									    <dt>价格：</dt>
 									    <dd>
 									    	<p class="row-price">
-						                        <i class="dollar">&yen;</i><span id="J_Price">138.00</span>
+						                        <i class="dollar">&yen;</i><span id="J_Price">138.56</span>
 						                        <span class="promotion"><em title="免运费" class="my"></em></span>  
 									    	</p>
 									    </dd>
@@ -465,7 +465,7 @@
 	                        	<li style="opacity: 1;">
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift5.jpg"/></a>
+	                        				<a><img src="../img/birthgift5.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -473,7 +473,7 @@
                         			</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift5.jpg"/></a>
+	                        				<a><img src="../img/birthgift5.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -481,7 +481,7 @@
 	                        		</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift5.jpg"/></a>
+	                        				<a><img src="../img/birthgift5.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -491,7 +491,7 @@
                         		<li>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift3.jpg"/></a>
+	                        				<a><img src="../img/birthgift3.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -499,7 +499,7 @@
                         			</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift3.jpg"/></a>
+	                        				<a><img src="../img/birthgift3.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -507,7 +507,7 @@
 	                        		</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift3.jpg"/></a>
+	                        				<a><img src="../img/birthgift3.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -517,7 +517,7 @@
                         		<li>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift7.jpg"/></a>
+	                        				<a><img src="../img/birthgift7.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -525,7 +525,7 @@
                         			</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift7.jpg"/></a>
+	                        				<a><img src="../img/birthgift7.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -533,7 +533,7 @@
 	                        		</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift7.jpg"/></a>
+	                        				<a><img src="../img/birthgift7.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -543,7 +543,7 @@
                         		<li>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift8.jpg"/></a>
+	                        				<a><img src="../img/birthgift8.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -551,7 +551,7 @@
                         			</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift8.jpg"/></a>
+	                        				<a><img src="../img/birthgift8.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
@@ -559,7 +559,7 @@
 	                        		</div>
 	                        		<div>
 	                        			<p class="imgLike">
-	                        				<a><img src="img/birthgift8.jpg"/></a>
+	                        				<a><img src="../img/birthgift8.jpg"/></a>
 	                        			</p>
 	                        			<p class="imgPrice">
 	                        				<span class="spanPrice"><s>￥</s>"179.00"</span>
