登录注册页面完成

--- a/src/index.html
+++ b/src/index.html
@@ -1143,11 +1143,12 @@
 								<dd>
 									<input type="text" placeholder="验证码" class="codeText"/>
 									<span class="code" >1234</span> 看不清？点击验证码更新
+									<p></p>
 								</dd>
 							</dl>
 							<p class="login-auto"><input type="checkbox" checked/>下次自动登录</p>
 							<p><input type="submit" value="立即登录" class="submit"/></p>
-							<p class="bottom"><span>还没账号？<a href="">注册</a></span><a class="foget" href="">忘记密码？</a></p>
+							<p class="bottom"><span>还没账号？<a href="" style="color: #888;" class="signA">注册</a></span><a class="foget" href="">忘记密码？</a></p>
 						</form>
 					</div>
 				</div>
@@ -1184,11 +1185,12 @@
 								<dd>
 									<input type="text" placeholder="验证码" class="codeText"/>
 									<span class="code" >1234</span> 看不清？点击验证码更新
+									<p></p>
 								</dd>
 							</dl>
 							<p class="login-auto">《卡当注册协议》</p>
 							<p><input type="submit" value="同意协议并注册" class="submit"/></p>
-							<p class="bottom"><span>已有账号？<a href="">登录</a></span></p>
+							<p class="bottom"><span>已有账号？<a href="" class="loginA" style="color: #888;">登录</a></span></p>
 						</form>
 					</div>
 				</div>
