项目基本完成，解决各种bug中……

--- a/src/html/list.html
+++ b/src/html/list.html
@@ -11,6 +11,7 @@
 		<script src="../js/list.js" ></script>
 	</head>
 	<body>
+	<div id="wrap">
 		<div id="header">
 			<span class="logo"><a href="#" target="_self" title="卡当网"></a></span>
 			<div class="intro">
@@ -493,7 +494,8 @@
 			<ul>
 				<li class="fast-li olSer">
 					<a class="fast-a onl_askme">
-						<span class="olSerSpan">在线<br/>客服</span>
+						<i class="icon wenwo"></i>
+						<span class="olSerSpan">送礼<br/>问我</span>
 					</a>
 				</li>
 				<li class="fast-li">
@@ -520,5 +522,6 @@
 				</li>
 			</ul>
 		</div>
+	</div>
 	</body>
 </html>
