--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 	        			</ul>
 	        		</li>
 	        		<li>
-	        			<a href="cart.html" target="_blank" title="购物车"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
+	        			<a href="html/cart.html" target="_blank" title="购物车"><i class="icon-cart"></i>购物车<i class="icon"></i></a>
 	        			<p class="select" style="width: 304px;left:80px;color:#999">您的购物车中暂无商品，赶快选择心爱的商品吧！</p>
 	        		</li>
 	        		<li>
@@ -60,7 +60,7 @@
         	</div>
         	<div class="nav">
         		<ul class="nav-list">
-        			<li><a href="list.html" target="_blank" title="暖心礼物">暖心礼物<img src="img/navHot.gif" class="nav-hot"/></a></li>
+        			<li><a href="html/list.html" target="_blank" title="暖心礼物">暖心礼物<img src="img/navHot.gif" class="nav-hot"/></a></li>
         			<li><a href="#" title="送女生">送女生</a></li>
         			<li><a href="#" title="送男生">送男生</a></li>
         			<li><a href="#" title="生日礼物">生日礼物</a></li>
@@ -308,7 +308,7 @@
                                 </li>
                                 <li>
                        				 <p class="imgbox">
-                           			 <a href="product.html" target="_blank" title="限量版马卡龙充电式多功能移动电源 精致小巧一手掌握"><img src="img/birthgift2.jpg" alt="限量版马卡龙充电式多功能移动电源 精致小巧一手掌握" /></a>
+                           			 <a href="html/product.html" target="_blank" title="限量版马卡龙充电式多功能移动电源 精致小巧一手掌握"><img src="img/birthgift2.jpg" alt="限量版马卡龙充电式多功能移动电源 精致小巧一手掌握" /></a>
                        				 </p>
                         			<p class="pp del"></p>
                         			<p class="pp gift-price"><a class="eval-num">2529条评价</a><span class="price"><em>¥</em>138.00</span></p>
