--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<title>卡当网</title>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/common.css" />
-		<link rel="stylesheet" href="css/index.css" />
+		<link rel="stylesheet" href="dist/css/index.css" />
 		<script src="js/jquery-1.12.0.js"></script>
 		<script src="js/common.js"></script>
 		<script src="js/mycookie.js"></script>
@@ -290,16 +290,16 @@
 			
 			<!--第二屏 楼层-->
 			<div class="floor-nav" id="floor-nav">
-                <div class="floorCon">
-                    <ul>
-                        <li class="current" title="生日礼物">生日礼物</li>
-                        <li title="本周新品">本周新品</li>
-                        <li title="送女友礼物">送女友礼物</li>
-                        <li title="送男友礼物">送男友礼物</li>
-                        <li title="成双成对礼物">成双成对礼物</li>
-                    </ul>
-                </div>
-            </div>
+        <div class="floorCon">
+          <ul>
+            <li class="current" title="生日礼物">生日礼物</li>
+            <li title="本周新品">本周新品</li>
+            <li title="送女友礼物">送女友礼物</li>
+            <li title="送男友礼物">送男友礼物</li>
+            <li title="成双成对礼物">成双成对礼物</li>
+          </ul>
+        </div>
+    	</div>
 			
 			<div id="bigWrap">
 				<div class="floor-main">
