--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -3,13 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>购物车</title>
-		<link rel="stylesheet" href="../css/reset.css" />
-		<link rel="stylesheet" href="../css/common.css" />
-		<link rel="stylesheet" href="../css/cart.css" />
-		<script src="../js/jquery-1.12.0.js"></script>
-		<script src="../js/common.js"></script>
-		<script src="../js/mycookie.js"></script>
-		<script src="../js/cart.js" ></script>
+		<link rel="stylesheet" href="../lib/css/reset.css" />
+		<link rel="stylesheet" href="../dist/css/common.css" />
+		<link rel="stylesheet" href="../dist/css/cart.css" />
 	</head>
 	
 	<body>
@@ -140,5 +136,10 @@
 				</li>
 			</ul>
 		</div>
-	</body>
+	
+    <script src="../lib/js/jquery-1.12.0.js"></script>
+    <script src="../lib/js/common.js"></script>
+    <script src="../lib/js/mycookie.js"></script>
+    <script src="../js/cart.js" ></script>
+  </body>
 </html>
