--- a/src/html/list.html
+++ b/src/html/list.html
@@ -3,12 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>列表页</title>
-		<link rel="stylesheet" href="../css/reset.css" />
-		<link rel="stylesheet" href="../css/common.css" />
-		<link rel="stylesheet" href="../css/list.css" />
-		<script src="../js/jquery-1.12.0.js"></script>
-		<script src="../js/common.js"></script>
-		<script src="../js/list.js" ></script>
+		<link rel="stylesheet" href="../lib/css/reset.css" />
+		<link rel="stylesheet" href="../dist/css/common.css" />
+		<link rel="stylesheet" href="../dist/css/list.css" />
+		
 	</head>
 	<body>
 	<div id="wrap">
@@ -532,5 +530,9 @@
 			</ul>
 		</div>
 	</div>
+
+	<script src="../lib/js/jquery-1.12.0.js"></script>
+	<script src="../lib/js/common.js"></script>
+	<script src="../js/list.js" ></script>
 	</body>
 </html>
