--- a/src/html/product.html
+++ b/src/html/product.html
@@ -3,13 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>商品详情</title>
-		<link rel="stylesheet" href="../css/reset.css" />
-		<link rel="stylesheet" href="../css/common.css" />
-		<link rel="stylesheet" href="../css/product.css" />
-		<script src="../js/jquery-1.12.0.js"></script>
-		<script src="../js/common.js"></script>
-		<script src="../js/mycookie.js"></script>
-		<script src="../js/product.js" ></script>
+		<link rel="stylesheet" href="../lib/css/reset.css" />
+		<link rel="stylesheet" href="../dist/css/common.css" />
+		<link rel="stylesheet" href="../dist/css/common.css" />
+		<link rel="stylesheet" href="../dist/css/product.css" />
 	</head>
 	<body>
 	<div id="wrap">
@@ -1002,5 +999,10 @@
 			</ul>
 		</div>
 	</div>
+
+	<script src="../lib/js/jquery-1.12.0.js"></script>
+	<script src="../lib/js/common.js"></script>
+	<script src="../lib/js/mycookie.js"></script>
+	<script src="../js/product.js" ></script>
 	</body>
 </html>
