--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>卡当网</title>
-		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="lib/css/reset.css" />
 		<link rel="stylesheet" href="dist/css/common.css" />
 		<link rel="stylesheet" href="dist/css/index.css" />
-		<script src="js/jquery-1.12.0.js"></script>
-		<script src="js/common.js"></script>
-		<script src="js/mycookie.js"></script>
-		<script src="js/index.js"></script>
 	</head>
 	<body>	
 		<div id="wrap">
@@ -1127,31 +1123,31 @@
 								<p class="f18">无需注册</p>
 								<p class="f14">直接使用社交账号登录</p>
 							</dt>
-							<dd><a href="" title="微博" class="weibo">微博</a></dd>
-							<dd><a href="" title="QQ" class="qq">QQ</a></dd>
-							<dd><a href="" title="支付宝" class="alipay">支付宝</a></dd>
+							<dd><a href="#" title="微博" class="weibo">微博</a></dd>
+							<dd><a href="#" title="QQ" class="qq">QQ</a></dd>
+							<dd><a href="#" title="支付宝" class="alipay">支付宝</a></dd>
 						</dl>
 						<div class="login">
-							<form class="loginFrom" method="post">
+							<form class="loginFrom" name="loginForm" method="post" action="#">
 								<dl>
 									<dt class="f18">用户登录</dt>
 									<dd>
-										<p><input type="text" class="username" placeholder="邮箱/用户名" /></p>
+										<p><input type="text" class="username" placeholder="邮箱/手机" name="loginUserId"/></p>
 										<p></p>
 									</dd>
 									<dd>
-										<p><input type="password" class="pwd" placeholder="密码" /></p>
+										<p><input type="password" class="pwd" placeholder="密码" name="loginUserPwd"/></p>
 										<p></p>
 									</dd>
 									<dd>
 										<input type="text" placeholder="验证码" class="codeText"/>
-										<span class="code" >1234</span> 看不清？点击验证码更新
+										<span class="code">1234</span> 看不清？点击验证码更新
 										<p></p>
 									</dd>
 								</dl>
 								<p class="login-auto"><input type="checkbox" checked/>下次自动登录</p>
 								<p><input type="submit" value="立即登录" class="submit"/></p>
-								<p class="bottom"><span>还没账号？<a href="" style="color: #888;" class="signA">注册</a></span><a class="foget" href="">忘记密码？</a></p>
+								<p class="bottom"><span>还没账号？<a href="#signWrap" style="color: #888;" class="signA">注册</a></span><a class="foget" href="#">忘记密码？</a></p>
 							</form>
 						</div>
 					</div>
@@ -1174,15 +1170,19 @@
 							<dd><a href="" title="支付宝" class="alipay">支付宝</a></dd>
 						</dl>
 						<div class="login">
-							<form class="loginFrom" method="post">
+							<form class="loginFrom" name="signForm" method="post" action="#">
 								<dl>
 									<dt class="f18">用户注册</dt>
 									<dd>
-										<p><input type="text" class="username" placeholder="邮箱" /></p>
+										<p><input type="text" class="username" placeholder="邮箱/手机号" name="signUserId"/></p>
 										<p></p>
 									</dd>
 									<dd>
-										<p><input type="password" class="pwd" placeholder="密码" /></p>
+										<p><input type="text" class="pwd" placeholder="用户名(昵称)" name="signUserName"/></p>
+										<p></p>
+									</dd>
+									<dd>
+										<p><input type="password" class="pwd" placeholder="密码" name="signUserPwd"/></p>
 										<p></p>
 									</dd>
 									<dd>
@@ -1201,5 +1201,10 @@
 				<div class="loginPop"></div>
 			</div>
 		</div><!--wrap-->
+
+		<script src="lib/js/jquery-1.12.0.js"></script>
+		<script src="lib/js/common.js"></script>
+		<script src="lib/js/mycookie.js"></script>
+		<script src="js/index.js"></script>
 	</body>
 </html>
